--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <script src="test.js">
 </script>
 <meta content="width=device-width, initial-scale=1.0" name="viewport">
-<link href="test.css" rel="stylesheet">
+<link href="css/test.css" rel="stylesheet">
 </head>
 <body>
 <div id="top">
